# LibraryManagementSystem

./: .gitignore  README.md
DesignPatterns/BuilderPattern/: BuilderPattern.cpp  Notes.md  User.cpp  User.hpp  UserBuilder.cpp  UserBuilder.hpp
LibraryManagementSystem/: CMakeLists.txt  Requirements.md
LibraryManagementSystem/Src/: LibraryManagementSystem.cpp
LibraryManagementSystem/Src/Auth/: UserAuthenticator.cpp  UserAuthenticator.hpp
LibraryManagementSystem/Src/Book/: BookCopy.cpp  BookCopy.hpp  BookDetails.cpp  BookDetails.hpp
LibraryManagementSystem/Src/DbAccessor/: DbAccessor.hpp  LocalDbAccessor.cpp  LocalDbAccessor.hpp
LibraryManagementSystem/Src/IdGenerator/: IdGenerator.cpp  IdGenerator.hpp
LibraryManagementSystem/Src/Member/: Member.cpp  Member.hpp
LibraryManagementSystem/Src/Searcher/BookSearcher/: AuthorBasedBookSearcher.cpp  AuthorBasedBookSearcher.hpp  BookSearcher.hpp  IdBasedBookSearcher.cpp  IdBasedBookSearcher.hpp  NameBasedBookSearcher.cpp  NameBasedBookSearcher.hpp
LibraryManagementSystem/Src/Searcher/MemberSearcher/: IdBasedMemberSearcher.cpp  IdBasedMemberSearcher.hpp  MemberSearcher.hpp  NameBasedMemberSearcher.cpp  NameBasedMemberSearcher.hpp
StopWordRemover/: Readme.md  main.cpp
